# BTP

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Instructions.txt  Makefile  Mesh.make  README.md  build.lua  install-dependencies.py
src/: 2d.cpp  2d.h  3d.cpp  3d.h  display.cpp  display.h  draw_object.h  dxfreader.cpp  dxfreader.h  geometry.cpp  geometry.h  gl_abstraction.h  linear_algebra.cpp  linear_algebra.h  main.cpp  mesh.cpp  mesh.h  mesh2d.h  mesh2d_debug.cpp  mesh2d_display.cpp  mesh2d_private.cpp  mesh2d_public.cpp  mesh3d.h  mesh3d_debug.cpp  mesh3d_display.cpp  mesh3d_private.cpp  mesh3d_public.cpp  mesh_basic.h  mesh_display.cpp  mesh_private.cpp  mesh_public.cpp  model.h  model2d.cpp  model2d.h  model3d.cpp  model3d.h  position.cpp  position.h  preprocess.h  solver.h  (+6 more)
src/shaders/: 3d_display.glsl  3d_ind.glsl  basic_display.glsl  debug_display.glsl  inspect_display.glsl
